# cybercrew

./: .env  .gitignore  2024-04-18_14.md  2024-04-18_16.md  2024-04-18_18.md  2024-04-18_31.md  2024-04-27_13.md  2024-04-27_25.md  2024-04-28_11.md  2024-04-28_14.md  2024-04-28_2.md  2024-04-28_52.md  2024-04-28_57.md  2024-04-28_72.md  2024-04-28_74.md  2024-04-28_78.md  2024-05-02_23.md  2024-05-02_35.md  2024-05-02_69.md  2024-05-02_71.md  2024-05-02_96.md  2024-05-03_50.md  2024-05-09_61.md  Modelfile  ModelfileCyberManager  README.md  crew_callback_logs.txt  crew_results_2024-05-02_100.md  crew_results_2024-05-02_51.md  crew_results_2024-05-02_97.md  crew_results_2024-05-03_25.md  crew_results_2024-05-03_36.md  crew_results_2024-05-08_21.md  crew_results_2024-05-08_27.md  crew_results_2024-05-08_60.md  crew_results_2024-05-08_75.md  crew_results_2024-05-09_10.md  crew_results_2024-05-09_16.md  crew_results_2024-05-09_24.md  crew_results_2024-05-09_41.md  (+13 more)
cybercrew/: README.md  cyber_analyst_report.md  cyber_report.md  pyproject.toml  threat_intell_report.md  triage_review_report.md  triaged_alerts.md
cybercrew/src/cybercrew/: crew.py  main.py
cybercrew/src/cybercrew/config/: agents.yaml  tasks.yaml
cybercrew/src/cybercrew/tools/: test_thehive_tool.py  thehive_alerts_20240711_085957.json  thehive_alerts_20240711_101312.json  thehive_alerts_tools_save.py  thehive_tool.py
